# A workspace without explicit packages is called virtual workspace
# This is typically useful if you want to keep all the packages organized in separate directories
[workspace]
resolver = "3"
members = [
    "src/hello_world",
    "src/hello_world_nostd"
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
